--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,11 +1,11 @@
 name: Run Unit Tests
-"on": push
+'on': push
 jobs:
   unit_test-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - run: |
-              npm ci
-              npm run build
-              npm run test:unit
+          npm ci
+          npm run build
+          npm run test:unit
