--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,7 +1,7 @@
 name: Run Unit Tests
 'on': push
 jobs:
-  unit_test-lint:
+  unit_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -11,6 +11,7 @@ jobs:
           npm run test:unit
   build_image:
     runs-on: ubuntu-latest
+    needs: unit_test
 
     steps:
       - name: Checkout code
