--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,3 +24,11 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t todo-ui-app:latest .
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+      - name: Push Docker image
+        run: |
+          docker tag todo-ui-app:latest hemn791/todo-ui-app:latest
+          docker push hemn791/todo-ui-app:latest
