--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,3 +32,14 @@ jobs:
         run: |
           docker tag todo-ui-app:latest hemn791/todo-ui-app:latest
           docker push hemn791/todo-ui-app:latest
+
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_PRIVATE_KEY }}
+          script: |
+            docker stop todo-ui--app-2 || true
+            docker rm todo-ui--app-2 || true
+            docker run -d --name todo-ui--app-2 -p 3006:80 hemn791/todo-ui-app:latest
