--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,6 +40,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
-            docker stop todo-ui--app-2 || true
-            docker rm todo-ui--app-2 || true
-            docker run -d --name todo-ui--app-2 -p 80:80 hemn791/todo-ui-app:latest
+            docker stop todo-ui-app-2
+            docker rm todo-ui-app-2
+            docker pull hemn791/todo-ui-app:latest
+            docker run -d --name todo-ui-app-2 -p 80:80 hemn791/todo-ui-app:latest
