--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,11 @@ jobs:
         run: |
           docker tag todo-ui-app:latest hemn791/todo-ui-app:latest
           docker push hemn791/todo-ui-app:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: unit_test
 
+    steps:
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v0.1.6
         with:
