--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,7 @@
 name: Run CI CD
-on: push
+on:
+  - push
+  - workflow_dispatch
 
 # here I decided to group them to make sure only on actions run at a time.
 concurrency:
@@ -12,8 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           npm i
-          npm run test:unit
-          npm run test:e2e
+          CI=true npm run test:unit
 
   build_dev_image:
     uses: 'playsoil/todo-ui/.github/workflows/build.yml@master'
@@ -32,9 +33,13 @@ jobs:
       app_base_url: 'http://88.198.112.124:8081'
       tag: 'dev'
 
+  e2e-tests:
+    uses: 'playsoil/todo-ui/.github/workflows/e2e.yml@master'
+    needs: deploy-to-dev
+
   build_production_image:
     uses: 'playsoil/todo-ui/.github/workflows/build.yml@master'
-    needs: deploy-to-dev
+    needs: e2e-tests
     secrets: inherit
     with:
       app_base_url: 'http://88.198.112.124:8080'
